--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width" />
-  <title>Happy Birthday!</title>
-
+  <title>Happy Birthday Zahrah!</title>
+  <link rel="shortcut icon" type="image/jpg" href="https://img.icons8.com/color/48/000000/gift--v1.png" />
   <link rel="stylesheet" href="styles/flexbox-center-container.css" media="all">
   <link rel="stylesheet" href="styles/system-fonts.css" media="all">
   <link rel="stylesheet" href="styles/style.css" media="all">
 </head>
 
 <body>
+  <audio id="voice" src="voice.mp3"></audio>
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
@@ -24,6 +25,10 @@
     </ul>
   </div>
   <div id="merrywrap" class="merrywrap">
+
+    <div id="message" class="message-hide">
+      Dress Nice and Get Ready by 6pm<div>Dinner 7:30pm</div>
+    </div>
     <canvas id="snowfall"></canvas>
     <div class="giftbox">
       <div class="cover">
